--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1>Marta </h1>
       <p class="subtitle">
         Ci siamo conosciuti su <strong>Hinge</strong>…  
-        e visto che ogni tanto ti piace chiamarmi <strong>Ing</strong>
-        Ho fatto quello che fa ogni ingegnere:  
+        e visto che ogni tanto ti piace chiamarmi <strong>Ing</strong>,
+        ho fatto quello che fa ogni ingegnere:  
         ho trasformato un gioco di parole in un invito vero 🤧
       </p>
     </header>
