--- a/index.html
+++ b/index.html
@@ -11,38 +11,14 @@
   <main class="card">
     <header class="hero">
       <div class="badge">from Hinge to Ing • release 14/02 💘</div>
-      <h1>Marta </h1>
+      <h1>Martaaaaa, la mia sbrebola preferita </h1>
       <p class="subtitle">
-        Ci siamo conosciuti su <strong>Hinge</strong>…  
-        e visto che ogni tanto ti piace chiamarmi <strong>Ing</strong>,
+        Ci siamo conosciuti su <strong>Hinge</strong>,un match come tanti… o forse no.
+        E visto che ogni tanto ti piace chiamarmi <strong>Ing</strong> (anche se d’ora in poi cercherò di essere un po’ meno razionale),
         ho fatto quello che fa ogni ingegnere:  
-        ho trasformato un gioco di parole in un invito vero 🤧
+        ho trasformato un gioco di parole in un invito vero e proprio🤧
       </p>
     </header>
-
-    <section class="panel">
-      <h2>Tre Parole</h2>
-      <ul class="timeline">
-        <li>
-          <span class="dot"></span>
-          <div>
-            <strong>Hinge</strong> — Un match come tanti… o forse no.
-          </div>
-        </li>
-        <li>
-          <span class="dot"></span>
-          <div>
-            <strong>Ing</strong> — Anche se d’ora in poi cercherò di essere un po’ meno razionale.
-          </div>
-        </li>
-        <li>
-          <span class="dot"></span>
-          <div>
-            <strong>Marta</strong> — La mia sbrebola preferita ❤️
-          </div>
-        </li>
-      </ul>
-    </section>
 
     <section class="panel">
       <h2>(Senza) Invito</h2>
