--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <section class="panel">
       <h2>(Senza) Invito</h2>
       <p class="question">
-        Marta, vuoi essere la mia <strong>Ingerina</strong> anche il 14 febbraio?  
-        Prometto: niente bug mentali strani a sto giro, solo baci 🫠
+        Baby, vuoi essere la mia <strong>baddie</strong> anche il 14 febbraio?  
+        Prometto, niente bug mentali strani a sto giro, solo baci 🫠
       </p>
 
       <div class="cta">
