--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>Martaaaaa, la mia sbrebola preferita </h1>
       <p class="subtitle">
         Ci siamo conosciuti su <strong>Hinge</strong>,un match come tanti… o forse no.
-        E visto che ogni tanto ti piace chiamarmi <strong>Ing</strong> (anche se d’ora in poi cercherò di essere un po’ meno razionale),
+        E visto che ti piace tanto chiamarmi <strong>Ing</strong> (anche se ancora non lo sono🙄),
         ho fatto quello che fa ogni ingegnere:  
         ho trasformato un gioco di parole in un invito vero e proprio🤧
       </p>
