--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="detail">
           <div class="k">Dove</div>
-          <div class="v"><span id="place">Chi lo sa</span></div>
+          <div class="v"><span id="place">🙈🙉🙊</span></div>
         </div>
       </div>
 
