--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <p class="final">
-        Non vedo l’ora di passarlo con te ❤️
+        Non vedo l’ora di passarlo con te 🛸🛸🛸
       </p>
 
       <small class="footer">
